--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.wickedsource</groupId>
-	<artifactId>wicket-spring-security-example</artifactId>
+	<groupId>de.mroedig.gamebid</groupId>
+	<artifactId>gamebid</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<!-- TODO project name -->
-	<name>quickstart</name>
+	<name>GameBid</name>
 	<description></description>
 	<!-- <organization> <name>company name</name> <url>company url</url> </organization> -->
 	<licenses>
